--- a/app/src/main/res/layout/activity_aed.xml
+++ b/app/src/main/res/layout/activity_aed.xml
@@ -47,12 +47,14 @@
                 android:orientation="vertical">
 
                 <fragment
+                    android:layout_margin="10dp"
                     android:layout_width="match_parent"
                     android:layout_height="330dp"
                     android:id="@+id/map"
                     android:name="com.google.android.gms.maps.SupportMapFragment"/>
 
                 <LinearLayout
+                    android:layout_margin="10dp"
                     android:layout_marginTop="15dp"
                     android:background="@drawable/aed_tab"
                     android:layout_width="match_parent"
