--- a/app/src/main/res/drawable-v24/btn_home.xml
+++ b/app/src/main/res/drawable-v24/btn_home.xml
@@ -3,17 +3,15 @@
     <item>
         <shape android:shape="rectangle">
             <gradient
-                android:angle="270"
-                android:endColor="#009A3B"
-                android:centerColor="#009A3B"
-                android:startColor="#009A3B"
+                android:endColor="@color/white"
+                android:startColor="@color/white"
                 android:type="linear" />
             <stroke
                 android:width="5dp"
                 android:color="#FFFCFC"
                 />
 
-            <corners android:radius="15dp" />
+            <corners android:radius="5dp" />
         </shape>
     </item>
 </selector>
