--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,13 +1,153 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/backgroud"
+    android:orientation="vertical"
     tools:context=".HomeActivity">
 
-    <Button
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_gravity="center"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <ImageView
+            android:layout_marginTop="5dp"
+            android:layout_marginStart="120dp"
+            android:src="@drawable/ic_logo"
+            android:layout_width="55dp"
+            android:layout_height="55dp">
+
+        </ImageView>
+        <TextView
+            android:id="@+id/titleText"
+            android:text="Cardict "
+            android:textColor="@color/maincolor1"
+            android:textStyle="bold"
+            android:textSize="25sp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+        </TextView>
+        <Button
+            android:id="@+id/logout"
+            android:onClick="clickLogout"
+            android:layout_marginStart="85dp"
+            android:background="@drawable/ic_logout"
+            android:layout_width="35dp"
+            android:layout_height="35dp">
+
+        </Button>
+
+    </androidx.appcompat.widget.Toolbar>
+
+
+
+
+    <!--<Button
+        android:id="@+id/logout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="300dp"
+        android:layout_marginBottom="10dp"
+        android:onClick="clickLogout"
+        android:text="로그아웃" />
+-->
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        android:padding="10dp"
+        android:orientation="vertical">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/msgText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="32dp"
+                android:layout_marginTop="16dp"
+                android:text="Good Morning!!"
+                android:textSize="18sp" />
+
+            <TextView
+                android:id="@+id/timeText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="75dp"
+                android:layout_marginTop="16dp"
+                android:text="18 :50"
+                android:textSize="18sp" />
+
+
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/userName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="32dp"
+            android:layout_marginTop="20dp"
+            android:text="TextView" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_marginTop="40dp"
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <LinearLayout
+            android:orientation="horizontal"
+            android:padding="30dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <Button
+                android:id="@+id/dataInputBtn"
+                android:background="@drawable/btn_home"
+                android:onClick="clickInputMydata"
+                android:layout_width="150dp"
+                android:layout_height="150dp">
+            </Button>
+            <Button
+                android:id="@+id/predictBtn"
+                android:background="@drawable/btn_home"
+                android:onClick="clickMyPredict"
+                android:layout_marginLeft="30dp"
+                android:layout_width="150dp"
+                android:layout_height="150dp">
+            </Button>
+
+        </LinearLayout>
+        <LinearLayout
+            android:orientation="horizontal"
+            android:padding="30dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <Button
+                android:id="@+id/bpmBtn"
+                android:background="@drawable/btn_home"
+                android:onClick="clickHeart"
+                android:layout_width="150dp"
+                android:layout_height="150dp">
+            </Button>
+            <Button
+                android:id="@+id/aedBtn"
+                android:background="@drawable/btn_home"
+                android:onClick="clickAed"
+                android:layout_marginLeft="30dp"
+                android:layout_width="150dp"
+                android:layout_height="150dp">
+            </Button>
+
+        </LinearLayout>
+    </LinearLayout>
+    <!--<Button
         android:id="@+id/dataInputBtn"
         android:layout_width="325dp"
         android:layout_height="65dp"
@@ -17,23 +157,7 @@
         android:drawablePadding="-70dp"
         android:onClick="clickInputMydata"
         android:paddingLeft="52dp"
-        android:text="@string/dataInputBtnText"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/userName" />
-
-    <Button
-        android:id="@+id/aedBtn"
-        android:layout_width="325dp"
-        android:layout_height="65dp"
-        android:layout_marginTop="32dp"
-        android:drawableStart="@drawable/ic_noun_map"
-        android:drawablePadding="-70dp"
-        android:onClick="clickAed"
-        android:paddingLeft="50dp"
-        android:text="@string/aedBtnText"
-        android:background="@drawable/button3"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/bpmBtn" />
+        android:text="@string/dataInputBtnText"/>
 
     <Button
         android:id="@+id/predictBtn"
@@ -45,9 +169,7 @@
         android:onClick="clickMyPredict"
         android:paddingLeft="40dp"
         android:background="@drawable/button3"
-        android:text="@string/predictBtnText"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/dataInputBtn" />
+        android:text="@string/predictBtnText"/>
 
     <Button
         android:id="@+id/bpmBtn"
@@ -59,51 +181,25 @@
         android:onClick="clickHeart"
         android:paddingLeft="53dp"
         android:background="@drawable/button2"
-        android:text="@string/bpmBtnText"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/predictBtn" />
+        android:text="@string/bpmBtnText" />
 
-    <TextView
-        android:id="@+id/msgText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="16dp"
-        android:text="Good Morning!!"
-        android:textSize="18sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar" />
-
-    <TextView
-        android:id="@+id/userName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="10dp"
-        android:text="TextView"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/msgText" />
 
     <Button
-        android:id="@+id/logout"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:layout_marginBottom="10dp"
-        android:onClick="clickLogout"
-        android:text="로그아웃"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        android:id="@+id/aedBtn"
+        android:layout_width="325dp"
+        android:layout_height="65dp"
+        android:layout_marginTop="32dp"
+        android:drawableStart="@drawable/ic_noun_map"
+        android:drawablePadding="-70dp"
+        android:onClick="clickAed"
+        android:paddingLeft="50dp"
+        android:text="@string/aedBtnText"
+        android:background="@drawable/button3"/>
 
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbar"
-        android:layout_gravity="center"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="?attr/colorPrimary"
-        android:minHeight="?attr/actionBarSize"
-        android:theme="?attr/actionBarTheme"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:layout_editor_absoluteX="5dp" >
-    </androidx.appcompat.widget.Toolbar>
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+
+-->
+
+
+
+</LinearLayout>
