--- a/app/src/main/res/layout/activity_heart_graph.xml
+++ b/app/src/main/res/layout/activity_heart_graph.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".HeartGraphActivity">
-
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar7"
@@ -16,259 +15,201 @@
         android:minHeight="?attr/actionBarSize"
         android:theme="?attr/actionBarTheme" />
 
-    <RelativeLayout
-        android:id="@+id/current_layout1"
-        android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:layout_below="@+id/toolbar7"
-        android:layout_alignParentStart="true"
-        android:layout_marginStart="0dp">
-
-
-        <TextView
-            android:id="@+id/current_text"
-            android:layout_width="120dp"
-            android:layout_height="30dp"
-            android:layout_marginTop="10dp"
-            android:text="최근 심박수"
-            android:textAlignment="center"
-            android:textColor="@color/black">
-
-        </TextView>
-
-        <RelativeLayout
-            android:id="@+id/current_layout"
-            android:layout_width="match_parent"
-            android:layout_height="60dp"
-            android:layout_below="@+id/current_text">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal">
-
-                <LinearLayout
-                    android:layout_width="100dp"
-                    android:layout_height="match_parent"
-                    android:layout_marginLeft="20dp"
-                    android:orientation="vertical">
-
-                    <TextView
-                        android:id="@+id/dateText"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="10dp"
-                        android:text="2019 - 10- 08"
-                        android:textColor="@color/black"
-                        android:textSize="13dp"></TextView>
-
-                    <TextView
-                        android:id="@+id/timeText"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="18 : 30 "
-                        android:textColor="@color/black"
-                        android:textSize="12dp"></TextView>
-
-                </LinearLayout>
-
-                <TextView
-                    android:id="@+id/statusText"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="50dp"
-                    android:layout_marginTop="15dp"
-                    android:text="EXCITE"
-                    android:textColor="@color/black"
-                    android:textSize="20dp"></TextView>
-
-                <TextView
-                    android:id="@+id/bpmText"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="40dp"
-                    android:layout_marginTop="15dp"
-                    android:text="75 BPM"
-                    android:textColor="@color/black"
-                    android:textSize="20dp"></TextView>
-            </LinearLayout>
-
-
-        </RelativeLayout>
-    </RelativeLayout>
-
-
-    <RelativeLayout
-        android:layout_below="@+id/current_layout1"
-        android:id="@+id/spinner_layout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="60dp">
-        <RelativeLayout
-            android:id="@+id/time_layout"
-            android:layout_width="180dp"
-            android:layout_height="50dp"
-            android:layout_margin="10dp"
-            android:layout_marginRight="3dp"
-            android:layout_weight=".28"
-            android:background="@drawable/spinner_border"
-            android:orientation="horizontal">
-
-            <Spinner
-                android:id="@+id/time_spinner"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_gravity="center_horizontal"
-                android:background="@android:color/transparent"
-                android:gravity="center"
-                android:layout_marginLeft="5dp"
-                android:autofillHints="time"
-                android:spinnerMode="dropdown" />
-
-            <ImageView
-                android:layout_width="50dp"
-                android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:layout_centerVertical="true"
-                android:layout_gravity="center"
-                android:src="@mipmap/drop" />
-
-        </RelativeLayout>
-
-        <RelativeLayout
-            android:id="@+id/staus_layout"
-            android:layout_toRightOf="@+id/time_layout"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_margin="10dp"
-            android:layout_marginRight="3dp"
-            android:layout_marginLeft="15dp"
-            android:layout_weight=".28"
-            android:background="@drawable/spinner_border"
-            android:orientation="horizontal">
-
-            <Spinner
-                android:id="@+id/status_spinner"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_gravity="center"
-                android:background="@android:color/transparent"
-                android:gravity="center"
-                android:autofillHints="status"
-                android:layout_marginLeft="5dp"
-                android:spinnerMode="dropdown" />
-
-            <ImageView
-                android:layout_width="50dp"
-                android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:layout_centerVertical="true"
-                android:layout_gravity="center"
-                android:src="@mipmap/drop" />
-
-        </RelativeLayout>
-
-
-    </RelativeLayout>
-
-    <RelativeLayout
-        android:layout_marginTop="15dp"
-        android:layout_below="@+id/spinner_layout"
-        android:id="@+id/graph_layout"
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-
-        <RelativeLayout
-            android:id="@+id/spinner_layout1"
+        <LinearLayout
+            android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-        </RelativeLayout>
+            <LinearLayout
+                android:layout_marginTop="20dp"
+                android:id="@+id/spinner"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
 
-        <TableLayout
-            android:id="@+id/valuetable"
-            android:layout_margin="13dp"
-            android:layout_width="match_parent"
-            android:layout_height="60dp">
-            <TableRow
-                android:background="@drawable/aed_tab"
-                android:id="@+id/value">
-                <TextView
+                <RelativeLayout
+                    android:id="@+id/time_layout"
+                    android:layout_width="330dp"
                     android:layout_height="50dp"
-                    android:id="@+id/max"
-                    android:layout_marginTop="15dp"
+                    android:layout_marginLeft="13dp"
+                    android:layout_marginRight="3dp"
+                    android:layout_weight=".28"
+                    android:background="@drawable/spinner_border"
+                    android:orientation="horizontal">
+
+                    <Spinner
+                        android:id="@+id/time_spinner"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_centerVertical="true"
+                        android:layout_gravity="center_horizontal"
+                        android:background="@android:color/transparent"
+                        android:gravity="center"
+                        android:layout_marginLeft="5dp"
+                        android:autofillHints="time"
+                        android:spinnerMode="dropdown" />
+
+                    <ImageView
+                        android:layout_width="50dp"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentRight="true"
+                        android:layout_centerVertical="true"
+                        android:layout_gravity="center"
+                        android:src="@mipmap/drop" />
+
+                </RelativeLayout>
+
+                <RelativeLayout
+                    android:id="@+id/staus_layout"
+                    android:layout_width="330dp"
+                    android:layout_height="50dp"
+                    android:layout_marginRight="13dp"
                     android:layout_marginLeft="20dp"
-                    android:layout_width="50dp"
+                    android:layout_weight=".28"
+                    android:background="@drawable/spinner_border"
+                    android:orientation="horizontal">
 
-                    android:text="MAX |"
-                    android:textSize="14dp"
-                    android:textStyle="bold" />
+                    <Spinner
+                        android:id="@+id/status_spinner"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_centerVertical="true"
+                        android:layout_gravity="center"
+                        android:background="@android:color/transparent"
+                        android:gravity="center"
+                        android:autofillHints="status"
+                        android:layout_marginLeft="5dp"
+                        android:spinnerMode="dropdown" />
 
-                <TextView
-                    android:id="@+id/max_v"
-                    android:layout_marginTop="15dp"
-                    android:layout_marginLeft="0dp"
-                    android:layout_width="50dp"
-                    android:text=""
-                    android:textSize="14dp"
-                    android:textStyle="bold" />
+                    <ImageView
+                        android:layout_width="50dp"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentRight="true"
+                        android:layout_centerVertical="true"
+                        android:layout_gravity="center"
+                        android:src="@mipmap/drop" />
 
-                <TextView
-                    android:id="@+id/avg"
-                    android:layout_marginTop="15dp"
-                    android:layout_marginLeft="20dp"
-                    android:layout_width="50dp"
-                    android:text="AVG |"
-                    android:textSize="14dp"
-                    android:textStyle="bold" />
+                </RelativeLayout>
 
-                <TextView
-                    android:id="@+id/avg_v"
-                    android:layout_marginTop="15dp"
-                    android:layout_marginLeft="0dp"
-                    android:layout_width="50dp"
-                    android:text=""
-                    android:textSize="14dp"
-                    android:textStyle="bold" />
+            </LinearLayout>
 
-                <TextView
-                    android:id="@+id/min"
-                    android:layout_marginTop="15dp"
-                    android:layout_marginLeft="20dp"
-                    android:text="MIN |"
-                    android:layout_width="50dp"
-                    android:textSize="14dp"
-                    android:textStyle="bold" />
+            <TableLayout
+                android:id="@+id/valuetable"
+                android:layout_margin="15dp"
+                android:layout_width="match_parent"
+                android:layout_height="65dp">
+                <TableRow
+                    android:layout_height="65dp"
+                    android:background="@drawable/aed_tab"
+                    android:id="@+id/value">
+                    <TextView
+                        android:layout_height="35dp"
+                        android:id="@+id/max"
+                        android:layout_marginTop="17dp"
+                        android:layout_marginLeft="20dp"
+                        android:layout_width="50dp"
+                        android:text="MAX |"
+                        android:textSize="14dp"
+                        android:textStyle="bold" />
 
-                <TextView
-                    android:id="@+id/min_v"
-                    android:layout_marginTop="15dp"
-                    android:layout_marginLeft="0dp"
-                    android:layout_width="50dp"
-                    android:text=""
-                    android:textSize="14dp"
-                    android:textStyle="bold" />
+                    <TextView
+                        android:layout_height="35dp"
+                        android:id="@+id/max_v"
+                        android:layout_marginTop="17dp"
+                        android:layout_marginLeft="0dp"
+                        android:layout_width="50dp"
+                        android:text=""
+                        android:textSize="14dp"
+                        android:textStyle="bold" />
 
-            </TableRow>
-        </TableLayout>
+                    <TextView
+                        android:id="@+id/avg"
+                        android:layout_height="35dp"
+                        android:layout_marginTop="17dp"
+                        android:layout_marginLeft="20dp"
+                        android:layout_width="50dp"
+                        android:text="AVG |"
+                        android:textSize="14dp"
+                        android:textStyle="bold" />
 
-        <com.github.mikephil.charting.charts.LineChart
-            android:id="@+id/linechart"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_margin="10dp"
-            android:layout_below="@+id/valuetable"
-            android:layout_centerInParent="true"
-            android:layout_marginTop="0dp"
-            android:layout_marginBottom="10dp">
+                    <TextView
+                        android:id="@+id/avg_v"
+                        android:layout_height="35dp"
+                        android:layout_marginTop="17dp"
+                        android:layout_marginLeft="0dp"
+                        android:layout_width="50dp"
+                        android:text=""
+                        android:textSize="14dp"
+                        android:textStyle="bold" />
 
-        </com.github.mikephil.charting.charts.LineChart>
+                    <TextView
+                        android:id="@+id/min"
+                        android:layout_height="35dp"
+                        android:layout_marginTop="17dp"
+                        android:layout_marginLeft="20dp"
+                        android:text="MIN |"
+                        android:layout_width="50dp"
+                        android:textSize="14dp"
+                        android:textStyle="bold" />
 
-    </RelativeLayout>
+                    <TextView
+                        android:id="@+id/min_v"
+                        android:layout_height="35dp"
+                        android:layout_marginTop="17dp"
+                        android:layout_marginLeft="0dp"
+                        android:layout_width="50dp"
+                        android:text=""
+                        android:textSize="14dp"
+                        android:textStyle="bold" />
+
+                </TableRow>
+            </TableLayout>
+
+            <com.github.mikephil.charting.charts.LineChart
+                android:id="@+id/linechart"
+                android:layout_width="380dp"
+                android:layout_height="370dp"
+                android:layout_below="@+id/valuetable"
+                android:layout_gravity="center"
+                android:layout_marginTop="-20dp"
+                android:layout_marginBottom="10dp">
+
+            </com.github.mikephil.charting.charts.LineChart>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="50dp">
+            </TextView>
+
+            <TextView
+                android:layout_margin="10dp"
+                android:text="[  TODAY  ]"
+                android:textSize="20dp"
+                android:textStyle="bold"
+                android:textColor="@color/maincolor1"
+                android:textAlignment="center"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+            </TextView>
+
+            <ListView
+                android:layout_marginTop="100dp"
+                android:dividerHeight="5dp"
+                android:divider="@color/white"
+                android:id="@+id/listView"
+                android:layout_margin="10dp"
+                android:layout_width="match_parent"
+                android:layout_height="500dp">
+            </ListView>
+
+
+        </LinearLayout>
+    </ScrollView>
 
 
 
-
-</RelativeLayout>
+</LinearLayout>
